there is a bug..

--- a/src/app/app.component.html
+++ b/src/app/app.component.html
@@ -709,7 +709,7 @@
 
   <!-- Server -->
 
-  <app-server></app-server>
+  <app-servers></app-servers>
 
   <!-- Terminal -->
   <div class="terminal" [ngSwitch]="selection.value">
