--- a/src/app/servers/servers.component.html
+++ b/src/app/servers/servers.component.html
@@ -11,7 +11,12 @@
 </button>
 <!-- <p [innerText]="allowNewServer"></p> -->
 <!-- <p>{{ serverCreationStatus }}</p> -->
-<p *ngIf="serverCreated">Server was created, server name is {{ serverName }}</p>
-<p *ngIf="!serverCreated">No server was created!</p>
+<p *ngIf="serverCreated; else noServer">
+  Server was created, server name is {{ serverName }}
+</p>
+<ng-template #noServer>
+  <p>No server was created!</p>
+</ng-template>
+<!-- <p *ngIf="!serverCreated">No server was created!</p> -->
 <app-server></app-server>
-<app-server></app-server>
+<!-- <app-server></app-server> -->
