--- a/src/app/servers/servers.component.html
+++ b/src/app/servers/servers.component.html
@@ -1,3 +1,8 @@
+<button class="btn btn-primary" (click)="onToggleDetails()">
+  Display Details
+</button>
+<br />
+<p *ngIf="showSecret">Secret Password=tuna</p>
 <label>Server Name</label>
 <!-- <input type="text" class="form-control" (input)="onUpdateServerName($event)" /> -->
 <input type="text" class="form-control" [(ngModel)]="serverName" />
@@ -18,5 +23,5 @@
   <p>No server was created!</p>
 </ng-template>
 <!-- <p *ngIf="!serverCreated">No server was created!</p> -->
-<app-server></app-server>
+<app-server *ngFor="let server of servers"></app-server>
 <!-- <app-server></app-server> -->
