added threee routes to page. Bug for other route suche must be tested..

--- a/src/app/app.component.html
+++ b/src/app/app.component.html
@@ -16,13 +16,7 @@
     "
   ></div>
   <ng-template #noRoutLink>
-    <h1>CBC gGmbH</h1>
-    <p>
-      Vision of this company is protect the environment. We advice
-      Non-governmental and governmental organizations stratagies to solve the
-      problems
-    </p>
-    <p>Mission of this company is not only ...</p>
+    <h1>Routes of this page are /employees, /servers, /info</h1>
   </ng-template>
 
   <router-outlet></router-outlet>
