--- a/src/app/info-page/info-page.component.html
+++ b/src/app/info-page/info-page.component.html
@@ -1,1 +1,13 @@
-<p>info-page works!</p>
+<h1>CBC gGmbH</h1>
+<h2>Vision</h2>
+<p>
+  Vision of this company is protect the environment. We advice Non-governmental
+  and governmental organizations stratagies to solve the problems
+</p>
+<h2>Mission</h2>
+<p>Mission of this company is not only ...</p>
+<h2>Qualification</h2>
+<p>
+  This company has been qualified by ISO with ISO9435, ISO5645 and ISO5678
+  qualification certificate.
+</p>
