added route for shopping list..

--- a/src/app/app.component.html
+++ b/src/app/app.component.html
@@ -4,7 +4,8 @@
     <h1>CBC gGmbH</h1>
     <nav>
       <a routerLink="/employees">Employees</a> |
-      <a routerLink="/info">Info</a> | <a routerLink="/servers">Servers</a>
+      <a routerLink="/info">Info</a> | <a routerLink="/servers">Servers</a> |
+      <a routerLink="/shoppinglist">Shopping List</a>
     </nav>
   </div>
   <div
